.html file that generates the web map application

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <div class="tooltip" id="tooltip"></div>
 
-<script type="text/javascript" src="TexasCountiesQoL_Fixed.js"></script>
+<script type="text/javascript" src="TexasCountiesQoLData.js"></script>
 
 <script>
     const key = 'XS6weqy2YCaXs8P5DmrE';
